@@ -148,4 +148,6 @@ extern void _wordcopy_bwd_dest_aligned (long int, long int, size_t) __THROW;
 /* Threshold value for when to enter the unrolled loops.  */
 #define	OP_T_THRES	16
 
+#define MEMCPY_OK_FOR_FWD_MEMMOVE 0
+
 #endif /* memcopy.h */
